tests/NormalTests/paczka1/fuzzy1/27487261.err
Error in line 4: N8ktw5k A391 16,7
Error in line 10: iuCyJajxGP A601 95,5
Error in line 29: bUlMd0iu S569 34,2
